tests/paczka1/fuzzy1/57743025.err
Error in line 4: S632 S199 36,5
Error in line 14: kbkTXc3oBUW S681 97,4
Error in line 30: gBQA26gg S199 94,8
